# ec_secrets_management

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  docker-compose.yml
public/css/: auth.css  console.css
public/pages/: console.html  login.html  register.html
src/: lib.rs  main.rs
src/db/: mod.rs
src/models/: mod.rs
src/repositories/: key.rs  mod.rs  users.rs  vault.rs
src/request_guards/: mod.rs
src/routes/: users.rs  vault.rs
src/utils/: hashing.rs  mod.rs  token.rs  vault.rs
tests/: ec_secrets_management.http
